# Networking-Project-Clientapp

./: FinalReport.docx  README.md  pom.xml  t.txt
server in C/: CMakeLists.txt  Dockerfile  client.c  file.c  file.h  makefile  server  server.c  server.h  tfp.c  tfp.h
server in C/Database/qwer/: 2.txt
server in C/test/: makefile  server  server.c
src/main/java/com/gr10/clientapp/: ClientApp.java  FXApplication.java
src/main/java/com/gr10/clientapp/config/: ClientConstant.java
src/main/java/com/gr10/clientapp/controller/: LoginController.java  MainScreenController.java  SignInController.java
src/main/java/com/gr10/clientapp/entity/: FileInfo.java  User.java
src/main/java/com/gr10/clientapp/repo/: UserRepo.java
src/main/java/com/gr10/clientapp/service/: AuthenService.java  NetworkService.java
src/main/java/com/gr10/clientapp/service/impl/: AuthenServiceImpl.java  NetworkService.java  NetworkServiceImpl.java
src/main/java/com/gr10/clientapp/services/: HelloService.java
src/main/java/com/gr10/clientapp/utils/: AlertUtils.java  DataPackageReceived.java  DataPackageSent.java  DataPackageUtils.java  StageManager.java  StreamUtils.java  t.txt  test.java
src/main/resources/: application.yml
src/main/resources/fxml/: login.fxml  main-screen.fxml  sign-in.fxml
